@@ -1,3 +1,11 @@
+2014-04-08  Geoffrey Garen  <ggaren@apple.com>
+
+        Removed an unused file.
+
+        Unreviewed.
+
+        * bmalloc/AsyncTask.cpp: Removed.
+
 2014-04-07  Geoffrey Garen  <ggaren@apple.com>
 
         Build bmalloc on Mac
